--- a/quienSomos.html
+++ b/quienSomos.html
@@ -10,9 +10,6 @@
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-   
-
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html"><img src="Imagenes/Logo.png" width="150"></a>
@@ -71,9 +68,9 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="..." class="d-block w-100" alt="foto_itamar">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
+                  <h5>first slide label</h5>
                   <p>Some representative placeholder content for the third slide.</p>
                 </div>
               </div>
@@ -95,21 +92,18 @@
 </body>
 
  <!-- Footer-->
- <footer class="bg-dark py-4 mt-auto">
+ <footer class="bg-dark py-4 mt-auto fixed-bottom">
   <div class="container px-5">
-      <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-          <div class="col-auto"><div class="small m-0 text-white">Pagina para Programacion Web</div></div>
-          <div class="col-auto">
-          </div><div class="col-auto">
-              <div class="small m-0 text-white"> Turismo Extremo &copy;  2024</div>       
-              </div>
-              
-          </div>
+    <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+      <div class="col-auto">
+        <div class="small m-0 text-white">Página para Programación Web</div>
       </div>
+      <div class="col-auto">
+        <div class="small m-0 text-white">Turismo Extremo © 2024</div>
+      </div>
+    </div>
   </div>
 </footer>
-
-
 
 
 </html>
