--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Turismo Extremo Sur</title>
   <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>
+  <link rel="stylesheet" href="estilos.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
@@ -42,8 +43,19 @@
       </div>
     </div>
   </nav>
-
-
 </body>
+
+<footer class="bg-dark py-4 mt-auto fixed-bottom">
+  <div class="container px-5">
+    <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+      <div class="col-auto">
+        <div class="small m-0 text-white">Página para Programación Web</div>
+      </div>
+      <div class="col-auto">
+        <div class="small m-0 text-white">Turismo Extremo © 2024</div>
+      </div>
+    </div>
+  </div>
+</footer>
 
 </html>
