--- a/quienSomos.html
+++ b/quienSomos.html
@@ -54,7 +54,7 @@
   <section class="bg-light py-5">
     <div class="container px-5 my-5">
       <div class="text-center mb-5">
-        <h1 class="fw-bolder">Nuestros Productos</h1>
+        <h1 class="fw-bolder">Quienes Somos </h1>
         <div id="carouselExampleDark" class="carousel carousel-dark slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
