--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar-header">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="Imagenes/Logo.png" width="150"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -55,6 +55,11 @@
         <input class="form-control" id="name" type="text" placeholder="Enter your name..." required />
         <label for="name">Nombre</label>
         <div class="invalid-feedback">Por favor introduzca un nombre.</div>
+      </div>
+      <div class="form-floating mb-3">
+        <input class="form-control" id="name" type="text" placeholder="Enter your lastname..." required />
+        <label for="name">Apellido</label>
+        <div class="invalid-feedback">Por favor introduzca un apellido.</div>
       </div>
       <div class="form-floating mb-3">
         <input class="form-control" id="email" type="email" placeholder="name@example.com" required />
