--- a/quienSomos.html
+++ b/quienSomos.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar-header">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="Imagenes/Logo.png" width="150">
