--- a/contacto.html
+++ b/contacto.html
@@ -57,7 +57,7 @@
         <div class="invalid-feedback">Por favor introduzca un nombre.</div>
       </div>
       <div class="form-floating mb-3">
-        <input class="form-control" id="name" type="text" placeholder="Enter your lastname..." pattern="[A-Za-z\s]+" title="Only letters and spaces are allowed" minlength="3" maxlength="20" required />
+        <input class="form-control" id="lastname" type="text" placeholder="Enter your lastname..." pattern="[A-Za-z\s]+" title="Only letters and spaces are allowed" minlength="3" maxlength="20" required />
         <label for="name">Apellido</label>
         <div class="invalid-feedback">Por favor introduzca un apellido.</div>
       </div>
