--- a/contacto.html
+++ b/contacto.html
@@ -85,9 +85,11 @@
         <div class="text-center text-danger mb-3">Error enviando el mensaje!</div>
       </div>
       <div class="d-grid">
+        <p class="warning-error" id="warning-error"></p>
         <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Enviar</button>
       </div>
     </form>
+    <script src="JS/valida.js"></script>
   </div>
 </div>
 
