--- a/quienSomos.html
+++ b/quienSomos.html
@@ -48,45 +48,25 @@
       </div>
     </div>
   </nav>
-
-
-  <section class="bg-light py-5">
-    <div class="container px-5 my-5">
-      <div class="text-center mb-5">
-        <h1 class="fw-bolder">Quienes Somos </h1>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-              <img src="Imagenes/FranciscoDiaz.jpg" class="d-block w-100" alt="foto_pancho">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="..." class="d-block w-100" alt="foto_itamar">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+  <!-- Cartas de presentacion-->
+  <!--Hay que meter estas cartas a un carrusel-->
+  <h2 class="text-center">Quiénes somos</h2>
+  <section>
+    <div class="card text-center mx-auto" style="width: 18rem;">
+      <br>
+      <div class="square-container">
+        <img src="Imagenes/FranciscoDiaz.jpg" class="card-img-top rounded-circle mx-auto d-block" alt="..."
+          style="width:100px; height:100px; object-fit: cover;">
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Francisco Diaz</h5>
+        <p class="card-text">Diseñador Web</p>
+        <p class="small mb-2">Descripcion de Francisco</p>
+        <div class="d-flex justify-content-center align-items-center">
+          <a href="#" class="social-icon"><img src="Imagenes/WhatsApp_icon.png" alt="Whatsapp" style="max-width: 25px;"
+              class="img-fluid"></a>
+          <a href="#" class="social-icon"><img src="Imagenes/Instagram_icon.png" alt="Instagram" style="max-width: 25px;"
+              class="img-fluid"></a>
         </div>
       </div>
     </div>
