Tarjetas con productos de servicios

--- a/nueServicios.html
+++ b/nueServicios.html
@@ -47,7 +47,43 @@
       </div>
     </div>
   </nav>
-</body>
+
+ 
+
+<h2 class="text-center mt-5">Nuestros servicios</h2>
+
+<div class="container d-flex justify-content-center mt-5">
+  <div class="card mx-3" style="width: 18rem;">
+    <img src="Imagenes/escalada.webp" class="card-img-top" alt="Escalada">
+    <div class="card-body">
+      <h5 class="card-title">Escalada Extrema</h5>
+      <p class="card-text">Maravillosas salidas de expedición por montañas o acantilados con guía especializado.</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Valor $40.000 por persona.</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Mas Detalles</a>
+    </div>
+  </div>
+
+  <div class="card mx-3" style="width: 18rem;">
+    <img src="Imagenes/rafting.jpg" class="card-img-top" alt="Rafting">
+    <div class="card-body">
+      <h5 class="card-title">Rafting Extremo</h5>
+      <p class="card-text">Viaja por torrentosos rápidos en una balsa de hasta 10 personas.</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Valor $ 20.000 por persona.</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Mas Detalles</a>
+    </div>
+  </div>
+</div>
+
+
+
 
 <footer class="bg-dark py-4 mt-auto fixed-bottom">
   <div class="container px-5">
