--- a/nueServicios.html
+++ b/nueServicios.html
@@ -38,7 +38,6 @@
           <li class="nav-item">
             <a class="nav-link active" href="contacto.html">Contáctanos</a>
           </li>
-
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -48,14 +47,11 @@
     </div>
   </nav>
 
- 
-
 <h2 class="text-center mt-5">Nuestros servicios</h2>
-
 <div class="container d-flex justify-content-center mt-5">
   <div class="card mx-3" style="width: 18rem;">
     <img src="Imagenes/escalada.webp" class="card-img-top" alt="Escalada">
-    <div class="card-body">
+    <div class="card-body" style="min-height: 125px; max-height: 200px;">
       <h5 class="card-title">Escalada Extrema</h5>
       <p class="card-text">Maravillosas salidas de expedición por montañas o acantilados con guía especializado.</p>
     </div>
@@ -69,21 +65,18 @@
 
   <div class="card mx-3" style="width: 18rem;">
     <img src="Imagenes/rafting.jpg" class="card-img-top" alt="Rafting">
-    <div class="card-body">
+    <div class="card-body" style="min-height: 125px; max-height: 200px;">
       <h5 class="card-title">Rafting Extremo</h5>
       <p class="card-text">Viaja por torrentosos rápidos en una balsa de hasta 10 personas.</p>
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">Valor $ 20.000 por persona.</li>
+      <li class="list-group-item">Valor $20.000 por persona.</li>
     </ul>
     <div class="card-body">
       <a href="#" class="card-link">Mas Detalles</a>
     </div>
   </div>
 </div>
-
-
-
 
 <footer class="bg-dark py-4 mt-auto fixed-bottom">
   <div class="container px-5">
