--- a/contacto.html
+++ b/contacto.html
@@ -48,6 +48,7 @@
     </div>
   </nav>
 <!--formulario-->
+<h2 class="text-center mt-5">Contactanos</h2>
 <div class="row justify-content-center">
   <div class="col-lg-8 col-xl-6">
     <form id="contactForm">
