--- a/elCliema.html
+++ b/elCliema.html
@@ -47,6 +47,9 @@
       </div>
     </div>
   </nav>
+
+  <h2 class="text-center mt-5">Consulta el clima</h2>
+  <!--Aqui cuerpo del calendario o lo que pongas-->
 </body>
 
 <footer class="bg-dark py-4 mt-auto fixed-bottom">
