--- a/quienSomos.html
+++ b/quienSomos.html
@@ -11,8 +11,9 @@
   <link rel="stylesheet" href="CSS/estilos.css">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous">
+  </script>
 </head>
 
 <body>
@@ -50,6 +51,7 @@
   </nav>
   <!-- Cartas de presentacion-->
   <!--CARRUSEL 2-->
+  <h2 class="text-center mt-5">¿Quienes somos?</h2>
   <div id="carouselExampleDark" class="carousel carousel-dark slide">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
