--- a/escalada.html
+++ b/escalada.html
@@ -47,7 +47,9 @@
     </div>
   </nav>
 
-<h2 class="text-center mt-5">Rafting Extremo</h2>
+<h2 class="text-center mt-5">Escalada Extrema</h2>
+
+
 
 
 <footer class="bg-dark py-4 mt-auto fixed-bottom">
