--- a/nueServicios.html
+++ b/nueServicios.html
@@ -59,7 +59,7 @@
       <li class="list-group-item">Valor $40.000 por persona.</li>
     </ul>
     <div class="card-body">
-      <a href="#" class="card-link">Mas Detalles</a>
+      <a href="escalada.html" class="card-link">Mas Detalles</a>
     </div>
   </div>
 
@@ -73,7 +73,7 @@
       <li class="list-group-item">Valor $20.000 por persona.</li>
     </ul>
     <div class="card-body">
-      <a href="#" class="card-link">Mas Detalles</a>
+      <a href="rafting.html" class="card-link">Mas Detalles</a>
     </div>
   </div>
 </div>
