ajuste de footer general

--- a/rafting.html
+++ b/rafting.html
@@ -50,7 +50,7 @@
 <h2 class="text-center mt-5">Rafting Extremo</h2>
 
 
-<footer class="bg-dark py-4 mt-auto fixed-bottom">
+<footer class="bg-dark py-4 mt-auto">
   <div class="container px-5">
     <div class="row align-items-center justify-content-between flex-column flex-sm-row">
       <div class="col-auto">
