--- a/escalada.html
+++ b/escalada.html
@@ -50,17 +50,17 @@
 <h2 class="text-center mt-5">Escalada Extrema</h2>
 
 <div class="card text-bg-dark">
-    <img src="..." class="card-img" alt="...">
+    <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="...">
     <div class="card-img-overlay">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <h5 class="card-title">Escalada Extrema</h5>
+      <p class="card-text">Escala en grupo o en solitario guiado por uno de nuestros instructores expertos.</p>
       <p class="card-text"><small>Last updated 3 mins ago</small></p>
     </div>
   </div>
 
 
 
-<footer class="bg-dark py-4 mt-auto fixed-bottom">
+<footer class="bg-dark py-4 mt-auto">
   <div class="container px-5">
     <div class="row align-items-center justify-content-between flex-column flex-sm-row">
       <div class="col-auto">
