--- a/quienSomos.html
+++ b/quienSomos.html
@@ -111,7 +111,7 @@
 </body>
 
 <!-- Footer-->
-<footer class="bg-dark py-4 mt-auto fixed-bottom">
+<footer class="bg-dark py-4 mt-auto">
   <div class="container px-5">
     <div class="row align-items-center justify-content-between flex-column flex-sm-row">
       <div class="col-auto">
