--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,9 @@
   </nav>
 <!--formulario-->
 <h2 class="text-center mt-5">Contactanos</h2>
-<div class="row justify-content-center">
+
+
+<div class="row justify-content-center mb-5" >
   <div class="col-lg-8 col-xl-6">
     <form id="contactForm">
       <div class="form-floating mb-3">
