fotos de pagina escalada y rafting

--- a/escalada.html
+++ b/escalada.html
@@ -49,12 +49,12 @@
 
 <h2 class="text-center mt-5">Escalada Extrema</h2>
 
-<div class="card text-bg-dark">
+<div class="card text-bg-dark mb-5">
     <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="...">
     <div class="card-img-overlay">
-      <h5 class="card-title">Escalada Extrema</h5>
-      <p class="card-text">Escala en grupo o en solitario guiado por uno de nuestros instructores expertos.</p>
-      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+      <h5 class="card-title">Rafting Extremo</h5>
+      <p class="card-text">Navega en una balsa en grupo y siente la adrenalina de viajar por los rapidos.</p>
+      
     </div>
   </div>
 
