--- a/rafting.html
+++ b/rafting.html
@@ -50,6 +50,17 @@
 <h2 class="text-center mt-5">Rafting Extremo</h2>
 
 
+
+<div class="card text-bg-dark mb-4">
+    <img src="Imagenes/raftinggrupo.jpeg" class="card-img" alt="raftinggrupo">
+    <div class="card-img-overlay">
+      <h5 class="card-title">Escalada Extrema</h5>
+      <p class="card-text">Escala en grupo o en solitario guiado por uno de nuestros instructores expertos.</p>
+      </div>
+  </div>
+
+
+
 <footer class="bg-dark py-4 mt-auto">
   <div class="container px-5">
     <div class="row align-items-center justify-content-between flex-column flex-sm-row">
