ajustes para calendario (1intento)

--- a/escalada.html
+++ b/escalada.html
@@ -13,6 +13,19 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous">
+  
+
+  <!--calendario-->
+  <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/core/main.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid/main.css" rel="stylesheet">
+  
+  <script src="">
+  
+
+
+
+
+
   </script>
 </head>
 
@@ -50,14 +63,15 @@
 <h2 class="text-center mt-5">Escalada Extrema</h2>
 
 <div class="card text-bg-dark mb-5">
-    <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="...">
+    <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="Img Escalada">
     <div class="card-img-overlay">
-      <h5 class="card-title">Rafting Extremo</h5>
-      <p class="card-text">Navega en una balsa en grupo y siente la adrenalina de viajar por los rapidos.</p>
-      
+      <h5 class="card-title">Escadada Extrema</h5>
+      <p class="card-text">Escalada grupal con toda la seguridad de nuestrs expertos. <br> ven a vivir la experiencia.</p>
+      <p class="card-text"><small>Last updated 3 mins ago</small></p>
     </div>
   </div>
-
+  
+ 
 
 
 <footer class="bg-dark py-4 mt-auto">
