--- a/escalada.html
+++ b/escalada.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Turismo Extremo Sur</title>
-
+  
   <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>
   <link rel="stylesheet" href="CSS/estilos.css">
-
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
+  
   <!--calendario-->
   <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/core/main.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid/main.css" rel="stylesheet">
-
-  <script src=""></script>
 </head>
 
 <body>
@@ -51,29 +51,31 @@
     </div>
   </nav>
 
-  <h2 class="text-center mt-5">Escalada Extrema</h2>
+<h2 class="text-center mt-5">Escalada Extrema</h2>
 
-  <div class="NombreDeLaClase">
-    <div class="card text-bg-dark mb-5">
-      <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="Img Escalada">
-      <div class="card-img-overlay">
-        <h5 class="card-title">Escadada Extrema</h5>
+<div class="card text-bg-dark mb-5">
+    <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="Img Escalada">
+    <div class="card-img-overlay">
+      <h5 class="card-title">Escadada Extrema</h5>
+      <p class="card-text">Escalada grupal con toda la seguridad de nuestrs expertos. <br> ven a vivir la experiencia.</p>
+      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  
+ 
+
+
+<footer class="bg-dark py-4 mt-auto">
+  <div class="container px-5">
+    <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+      <div class="col-auto">
+        <div class="small m-0 text-white">Página para Programación Web</div>
+      </div>
+      <div class="col-auto">
+        <div class="small m-0 text-white">Turismo Extremo © 2024</div>
       </div>
     </div>
   </div>
-
-
-  <footer class="bg-dark py-4 mt-auto">
-    <div class="container px-5">
-      <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-        <div class="col-auto">
-          <div class="small m-0 text-white">Página para Programación Web</div>
-        </div>
-        <div class="col-auto">
-          <div class="small m-0 text-white">Turismo Extremo © 2024</div>
-        </div>
-      </div>
-    </div>
-  </footer>
+</footer>
 
 </html>
