--- a/escalada.html
+++ b/escalada.html
@@ -13,20 +13,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous">
+    </script>
   
 
   <!--calendario-->
   <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/core/main.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid/main.css" rel="stylesheet">
+  <script src="JS/calendario.js"></script>
+
+
+
+
   
-  <script src="">
-  
-
-
-
-
-
-  </script>
 </head>
 
 <body>
@@ -71,7 +69,27 @@
     </div>
   </div>
   
- 
+  <div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <!-- Tarjeta de escalada -->
+      <div class="card text-bg-dark mb-5">
+        <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="Img Escalada">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Escalada Extrema</h5>
+          <p class="card-text">Escalada grupal con toda la seguridad de nuestros expertos. <br> ¡Ven a vivir la experiencia!</p>
+          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <!-- Contenedor para el calendario -->
+      <div id="calendario"></div>
+    </div>
+  </div>
+</div>
+
+
 
 
 <footer class="bg-dark py-4 mt-auto">
