--- a/rafting.html
+++ b/rafting.html
@@ -52,7 +52,7 @@
 
 
 <div class="card text-bg-dark mb-4">
-    <img src="Imagenes/raftinggrupo.jpeg" class="card-img" alt="raftinggrupo">
+    <img src="Imagenes/raftinggrupo.jpeg" class="card-img" alt="raftinggrupo" style="filter: brightness(0.75);">
     <div class="card-img-overlay">
       <h5 class="card-title">Escalada Extrema</h5>
       <p class="card-text">Escala en grupo o en solitario guiado por uno de nuestros instructores expertos.</p>
