--- a/index.html
+++ b/index.html
@@ -38,19 +38,14 @@
           <li class="nav-item">
             <a class="nav-link active" href="contacto.html">Contáctanos</a>
           </li>
-
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </nav>
 
   
 <div class="card text-bg-dark mb-5">
-  <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="...">
+  <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="..." style="filter: brightness(0.75);">
   <div class="card-img-overlay">
     <h3 class="card-title">Turismo Extremo</h3>
     <p class="card-text">Somos una pequeña empresa dedicada a dar una experiencia de calidad. <br>En nuestro ADN corre la adrenalina. Si quieres vivir grandes aventuras y de una manera segura
