--- a/quienSomos.html
+++ b/quienSomos.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>
   <link rel="stylesheet" href="CSS/estilos.css">
+  <link rel="stylesheet" href="FONTS/font_handler.css">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
