--- a/quienSomos.html
+++ b/quienSomos.html
@@ -63,7 +63,7 @@
             <p class="card-text">Diseñador Web</p>
             <p class="small mb-2">Descripción de Francisco</p>
             <div class="d-flex justify-content-center align-items-center">
-              <a href="https://web.whatsapp.com/send?phone=+56948484062&text=Hola Francisco!" class="social-icon"><img src="Imagenes/WhatsApp_icon.png" alt="Whatsapp"
+              <a href="https://web.whatsapp.com/send?phone=+56948484062&text=Hola Francisco!" target="_blank" class="social-icon"><img src="Imagenes/WhatsApp_icon.png" alt="Whatsapp"
                   style="max-width: 25px;" class="img-fluid"></a>
               <a href="#" target="_blank" class="social-icon"><img src="Imagenes/Instagram_icon.png" alt="Instagram"
                   style="max-width: 25px;" class="img-fluid"></a>
