--- a/quienSomos.html
+++ b/quienSomos.html
@@ -48,7 +48,7 @@
   </nav>
   <!-- Cartas de presentacion-->
   <!--CARRUSEL 2-->
-  <h2 class="text-center mt-5">¿Quienes somos?</h2>
+  <h2 class="text-center mt-5">Quienes somos</h2>
   <div id="carouselExampleDark" class="carousel carousel-dark slide">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
