--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   
 <div class="card text-bg-dark mb-5">
-  <img src="Imagenes/bannerIndex.png" class="card-img" alt="" style="filter: brightness(0.75);">
+  <img src="Imagenes/bannerIndex.png" class="card-img" alt="bannerIndex" style="filter: brightness(0.5);">
   <div class="card-img-overlay">
     <h3 class="card-title">Turismo Extremo</h3>
     <p class="card-text">Somos una pequeña empresa dedicada a dar una experiencia de calidad. <br>En nuestro ADN corre la adrenalina. Si quieres vivir grandes aventuras y de una manera segura
