ajuste index card full ancho

--- a/index.html
+++ b/index.html
@@ -45,19 +45,21 @@
   </nav>
 
   
-<div class="card text-bg-dark mb-5">
-  <img src="Imagenes/bannerIndex.png" class="card-img" alt="bannerIndex" style="filter: brightness(0.5);">
-  <div class="card-img-overlay">
-    <h3 class="card-title">Turismo Extremo</h3>
-    <p class="card-text">Somos una pequeña empresa dedicada a dar una experiencia de calidad. <br>En nuestro ADN corre la adrenalina. Si quieres vivir grandes aventuras y de una manera segura
-    ven con sotros!! <br> te estaremos esperando!! esto es Turismo Extremo. </p>
-    <p class="card-text"><small>Navega en una balsa o realiza escalada en grupo y siente la adrenalina de viajar. <br> Nuestros expertos te ayudaran en todo momento para brindar una experiancia unica.</small></p>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <div class="card text-bg-dark mb-5 w-100 full-width-card">
+          <img src="Imagenes/bannerIndex.png" class="card-img" alt="bannerIndex" style="filter: brightness(0.5);">
+          <div class="card-img-overlay">
+            <h3 class="card-title">Turismo Extremo</h3>
+            <p class="card-text">Somos una pequeña empresa dedicada a dar una experiencia de calidad. <br>En nuestro ADN corre la adrenalina. Si quieres vivir grandes aventuras y de una manera segura ven con nosotros!! <br> te estaremos esperando!! esto es Turismo Extremo. </p>
+            <p class="card-text"><small>Navega en una balsa o realiza escalada en grupo y siente la adrenalina de viajar. <br> Nuestros expertos te ayudarán en todo momento para brindar una experiencia única.</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-
-
-
-
+  
 </body>
 
 <footer class="bg-dark py-4 mt-auto">
