--- a/escalada.html
+++ b/escalada.html
@@ -55,8 +55,35 @@
       <p class="card-text">Escalada grupal con toda la seguridad de nuestrs expertos. <br> ven a vivir la experiencia.
       </p>
       <p class="card-text"><small>Last updated 3 mins ago</small></p>
-    </div>
+     </div>
   </div>
+  <div class="alert alert-error" id="alert">
+    <strong>Oh snap!</strong>
+</div>
+<table class="table">
+    <thead>
+        <tr>
+          <th>
+              Start date
+              <a href="#" class="btn small" id="date-start" data-date-format="yyyy-mm-dd" data-date="2012-02-20">Change</a>
+          </th>
+          <th>
+              End date
+              <a href="#" class="btn small" id="date-end" data-date-format="yyyy-mm-dd" data-date="2012-02-25">Change</a>
+          </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+          <td id="date-start-display">2012-02-20</td>
+          <td id="date-end-display">2012-02-25</td>
+        </tr>
+    </tbody>
+</table>
+
+
+
+
 </body>
 
 <footer class="bg-dark py-4 mt-auto">
