--- a/escalada.html
+++ b/escalada.html
@@ -14,10 +14,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
-
+  
   <!--calendario-->
-  <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/core/main.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid/main.css" rel="stylesheet">
+  <script src="bootstrap-datepicker-1.9.0-dist/js/bootstrap-datepicker.js"></script>
+  <script src="bootstrap-datepicker-1.9.0-dist/locales/bootstrap-datepicker.es.min.js"></script>
+
+  <!--ccs calendario-->
+  <link rel="stylesheet" href="bootstrap-datepicker-1.9.0-dist/css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="bootstrap-datepicker-1.9.0-dist/css/bootstrap-datepicker.css.map">
+
 </head>
 
 <body>
@@ -54,20 +59,19 @@
       <h5 class="card-title">Escadada Extrema</h5>
       <p class="card-text">Escalada grupal con toda la seguridad de nuestrs expertos. <br> ven a vivir la experiencia.
       </p>
-      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+      
+
+
+      <div data-date="12/03/2012"></div>
      </div>
   </div>
-  <div class="alert alert-error" id="alert">
-    <strong>Oh snap!</strong>
-</div>
-
+ </div>
 
   
 
-
-
-
 </body>
+
+
 
 <footer class="bg-dark py-4 mt-auto">
   <div class="container px-5">
