--- a/elCliema.html
+++ b/elCliema.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>
   <link rel="stylesheet" href="CSS/estilos.css">
   <link rel="stylesheet" href="FONTS/font_handler.css">
+  <script src="JS/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
@@ -44,7 +47,13 @@
   </nav>
 
   <h2 class="text-center mt-5">Consulta el clima</h2>
-  <!--Aqui cuerpo del calendario o lo que pongas-->
+
+  <p id="temperatura"></p>
+ 
+
+
+
+  
   
 </body>
 
