--- a/escalada.html
+++ b/escalada.html
@@ -14,14 +14,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
-  
-  <!--calendario-->
-  <script src="bootstrap-datepicker-1.9.0-dist/js/bootstrap-datepicker.js"></script>
-  <script src="bootstrap-datepicker-1.9.0-dist/locales/bootstrap-datepicker.es.min.js"></script>
-
-  <!--ccs calendario-->
-  <link rel="stylesheet" href="bootstrap-datepicker-1.9.0-dist/css/bootstrap-datepicker.css">
-  <link rel="stylesheet" href="bootstrap-datepicker-1.9.0-dist/css/bootstrap-datepicker.css.map">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+  <script src="JS/script.js"></script>
 
 </head>
 
@@ -60,14 +55,20 @@
       <p class="card-text">Escalada grupal con toda la seguridad de nuestrs expertos. <br> ven a vivir la experiencia.
       </p>
       
+    
 
-
-      <div data-date="12/03/2012"></div>
      </div>
   </div>
  </div>
 
-  
+ <div class="container mt-3">
+  <div class="row">
+      <div class="col-md-6">
+          <label for="fecha">Seleccione una fecha:</label>
+          <input type="text" class="form-control" id="fecha">
+      </div>
+  </div>
+</div>
 
 </body>
 
