--- a/rafting.html
+++ b/rafting.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Turismo Extremo Sur</title>
-
   <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>
   <link rel="stylesheet" href="CSS/estilos.css">
   <link rel="stylesheet" href="FONTS/font_handler.css">
@@ -14,6 +13,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+  <script src="JS/script.js"></script>
+
 </head>
 
 <body>
@@ -55,6 +58,18 @@
       <p class="card-text">Escala en grupo o en solitario guiado por uno de nuestros instructores expertos.</p>
     </div>
   </div>
+
+  
+ <div class="container mt-3">
+  <div class="row">
+      <div class="col-md-6">
+          <label for="fecha">Seleccione una fecha:</label>
+          <input type="text" class="form-control" id="fecha">
+      </div>
+  </div>
+</div>
+
+
 </body>
 
 <footer class="bg-dark py-4 mt-auto">
