--- a/escalada.html
+++ b/escalada.html
@@ -52,11 +52,7 @@
     <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="Img Escalada" style="filter: brightness(0.75);">
     <div class="card-img-overlay">
       <h5 class="card-title">Escadada Extrema</h5>
-      <p class="card-text">Escalada grupal con toda la seguridad de nuestrs expertos. <br> ven a vivir la experiencia.
-      </p>
-      
-    
-
+      <p class="card-text">Escalada grupal con toda la seguridad de nuestrs expertos. <br> ven a vivir la experiencia.</p>
      </div>
   </div>
  </div>
@@ -69,7 +65,6 @@
       </div>
   </div>
 </div>
-
 </body>
 
 
