--- a/elCliema.html
+++ b/elCliema.html
@@ -48,9 +48,12 @@
 
   <h2 class="text-center mt-5">Consulta el clima</h2>
 
-  <p id="temperatura"></p>
- 
+  <div id="container-clima">
+    
+    <p id="temperatura"></p>
 
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13317.894564585438!2d-70.6581013!3d-33.43696465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2scl!4v1715903213106!5m2!1ses!2scl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 
 
   
